--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,22 @@
 BROWSER=none
 EXTEND_ESLINT=true
 FAST_REFRESH=true
+
+#Cashfree 
+REACT_APP_CASHFREE_URL="https://sandbox.cashfree.com/pg/orders"
+REACT_APP_CASHFREE_CLIENT_ID="CF298621CF4B69KPE6I71C14AK4G" 
+REACT_APP_CASHFREE_CLIENT_SECRET="7ef59ea3a5c0c515fd0bdf65a59d9199983104db"
+
+# Social Links
+REACT_APP_SOCIAL_LINKS_FACEBOOK="https://www.facebook.com/JCBIndiaLtd/"
+REACT_APP_SOCIAL_LINKS_TWITTER="https://twitter.com/JCBIndiaLtd"
+REACT_APP_SOCIAL_LINKS_INSTAGRAM="https://www.instagram.com/jcbindialtd/"
+REACT_APP_SOCIAL_LINKS_LINKEDIN="https://www.linkedin.com/uas/login?session_redirect=%2Fcompany%2F10865023%3Ftrk%3Dtyah%26trkInfo%3DclickedVertical%253Acompany%252CclickedEntityId%253A10865023%252Cidx%253A2-1-2%252CtarId%253A1468936449852%252Ctas%253Ajcb%2520india%2520"
+REACT_APP_SOCIAL_LINKS_YOUTUBE="https://www.youtube.com/user/jcbindialtd"
+
+#CompanyInfo
+REACT_APP_COMPANY_ADDRESS="Registered office address - B-1 / I-1, 2nd Floor, <br> Mohan Co-operative Industrial Estate, Mathura Road New Delhi DL"
+REACT_APP_COMPANY_CIN="U74899DL1979PLC009431"
+REACT_APP_COMPANY_CONTACT="011-40539745"
+REACT_APP_COMPANY_TOLLFREE="18001037386"
+
