--- a/package.json
+++ b/package.json
@@ -89,16 +89,25 @@
     }
   },
   "dependencies": {
+    "@iamtraction/google-translate": "2.0.1",
+    "bootstrap": "5.2.3",
+    "country-state-city": "3.1.2",
+    "firebase": "9.15.0",
     "fontfaceobserver": "2.3.0",
+    "formik": "2.2.9",
     "i18next": "22.4.9",
     "i18next-browser-languagedetector": "7.0.1",
+    "json-to-csv-export": "2.1.1",
     "react": "18.2.0",
     "react-app-polyfill": "3.0.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
+    "react-hook-form": "7.42.1",
     "react-i18next": "12.1.4",
     "react-is": "18.2.0",
+    "react-json-to-csv": "1.2.0",
     "react-router-dom": "6.6.2",
+    "react-select": "5.7.0",
     "sanitize.css": "13.0.0",
     "styled-components": "5.3.6",
     "web-vitals": "3.1.1",
@@ -149,6 +158,7 @@
     "stylelint-config-recommended": "9.0.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.10.0",
+    "translation-generator": "1.1.2",
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
     "typescript": "4.6.4"
