--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "react-i18next": "12.1.4",
     "react-is": "18.2.0",
     "react-json-to-csv": "1.2.0",
+    "react-obfuscate": "3.6.8",
     "react-router-dom": "6.6.2",
     "react-select": "5.7.0",
     "sanitize.css": "13.0.0",
