--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
   "dependencies": {
     "@iamtraction/google-translate": "2.0.1",
     "bootstrap": "5.2.3",
+    "cashfree-sdk": "0.1.1",
     "country-state-city": "3.1.2",
     "firebase": "9.15.0",
     "fontfaceobserver": "2.3.0",
