--- a/package.json
+++ b/package.json
@@ -89,19 +89,27 @@
     }
   },
   "dependencies": {
+    "@google-cloud/local-auth": "2.1.0",
     "@iamtraction/google-translate": "2.0.1",
+    "axios": "1.3.4",
     "bootstrap": "5.2.3",
     "cashfree-sdk": "0.1.1",
     "country-state-city": "3.1.2",
     "firebase": "9.15.0",
     "fontfaceobserver": "2.3.0",
     "formik": "2.2.9",
+    "gapi-script": "1.2.0",
+    "google-auth-library": "8.7.0",
+    "googleapis": "105",
     "i18next": "22.4.9",
     "i18next-browser-languagedetector": "7.0.1",
     "json-to-csv-export": "2.1.1",
+    "lodash": "4.17.21",
     "react": "18.2.0",
     "react-app-polyfill": "3.0.0",
+    "react-db-google-sheets": "2.1.1",
     "react-dom": "18.2.0",
+    "react-google-sheets": "0.4.0",
     "react-helmet-async": "1.3.0",
     "react-hook-form": "7.42.1",
     "react-i18next": "12.1.4",
@@ -118,10 +126,12 @@
   "devDependencies": {
     "@commitlint/cli": "17.4.2",
     "@commitlint/config-conventional": "17.4.2",
+    "@craco/craco": "7.1.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@types/fontfaceobserver": "^2.1.0",
     "@types/jest": "^29.2.5",
+    "@types/lodash": "4.14.192",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
@@ -156,6 +166,7 @@
     "serve": "14.1.2",
     "shelljs": "0.8.5",
     "standard-version": "9.5.0",
+    "stream-browserify": "3.0.0",
     "stylelint": "14.16.1",
     "stylelint-config-recommended": "9.0.0",
     "stylelint-config-styled-components": "0.1.1",
