--- a/.env.local
+++ b/.env.local
@@ -20,3 +20,9 @@ REACT_APP_COMPANY_CIN="U74899DL1979PLC009431"
 REACT_APP_COMPANY_CONTACT="011-40539745"
 REACT_APP_COMPANY_TOLLFREE="18001037386"
 
+
+#GOOGLE_SHEETS
+REACT_APP_GOOGLE_SHEETS_API_KEY=AIzaSyCZxj0NZkAzozTjXKtU4qGerUCx7XNqfYQ
+REACT_APP_GOOGLE_SHEETS_DOC_ID=1_pefvNKw1Um7YVRo8NyHAtkAsgK9cXoFlcbG-L5s2kQ
+REACT_APP_GOOGLE_SHEETS_NAME=JCB_VALUES
+
